Fix horizontal scrolling

--- a/src/app.scss
+++ b/src/app.scss
@@ -133,3 +133,7 @@
         display: none;
     }
 }
+
+.list-category {
+    max-width: calc(100vw - 24px);
+}
